--- a/src/styles/tv-mode.css
+++ b/src/styles/tv-mode.css
@@ -19,7 +19,7 @@
 }
 
 .tv-display .prayer-tile-header {
-  padding: 6px 0;
+  padding: 2px 0;
 }
 
 .tv-display .gold-border {
@@ -112,21 +112,22 @@ screen and (min-width: 1920px) and (max-height: 1080px) {
 
   .tv-display .prayer-tile-header h3 {
     font-size: 2.5rem;
-    line-height: 2rem;
-    font-weight: 800;
+    line-height: 1.2;
+    font-weight: 900;
     color: #000000;
     /* black */
   }
 
   .tv-display .prayer-tile-header div {
     font-size: 3rem !important;
-    font-weight: 700;
+    line-height: 1.2 !important;
+    font-weight: 800;
     color: #000000;
     /* black */
   }
 
   .tv-display .clock-text {
-    font-size: 2.8rem !important;
+    font-size: 3.2rem !important;
     line-height: 1.1 !important;
     color: #000000;
     /* black */
@@ -135,7 +136,7 @@ screen and (min-width: 1920px) and (max-height: 1080px) {
   /* Specific fixes for LG and other WebOS TVs */
   .tv-display .tv-time-text {
     font-size: 2.5rem !important;
-    line-height: 1.2 !important;
+    line-height: 1.1 !important;
     padding-right: 8px !important;
     display: inline-block;
     color: #000000;
@@ -143,7 +144,7 @@ screen and (min-width: 1920px) and (max-height: 1080px) {
   }
 
   .tv-display .text-sm {
-    font-size: 1rem;
+    font-size: 1.2rem;
     line-height: 1.25rem;
   }
 
